-- SQL dump generated using DBML (dbml-lang.org)
-- Database: PostgreSQL
-- Generated at: 2023-10-01T06:10:43.397Z

CREATE TABLE "users" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "modified_at" timestamptz NOT NULL DEFAULT (now()),
  "username" text NOT NULL,
  "hashed_password" text NOT NULL,
  "nickname" text NOT NULL,
  "email" text NOT NULL,
  "email_verified" bool NOT NULL DEFAULT false,
  "password_changed_at" timestamptz NOT NULL DEFAULT '0001-01-01'
);

CREATE TABLE "verify_emails" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "modified_at" timestamptz NOT NULL DEFAULT (now()),
  "expired_at" timestamptz NOT NULL DEFAULT (now() + interval '15 minutes'),
  "user_id" bigint NOT NULL,
  "email" text NOT NULL,
  "secret_code" text NOT NULL,
  "used" bool NOT NULL DEFAULT false
);

CREATE TABLE "sessions" (
  "id" uuid PRIMARY KEY,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "expired_at" timestamptz NOT NULL,
  "username" text NOT NULL,
  "refresh_token" text NOT NULL,
  "user_agent" text NOT NULL,
  "client_ip" text NOT NULL,
  "blocked" boolean NOT NULL DEFAULT false
);

CREATE UNIQUE INDEX "uk_users_username_idx" ON "users" ("username");

CREATE UNIQUE INDEX "uk_users_email_idx" ON "users" ("email");

CREATE UNIQUE INDEX "uk_verify_email_id_secret_code" ON "verify_emails" ("id", "secret_code");

CREATE UNIQUE INDEX "uk_verify_email_used_email" ON "verify_emails" ("email", "used");

COMMENT ON COLUMN "users"."id" IS 'auto increment id';

COMMENT ON COLUMN "users"."created_at" IS 'data created time';

COMMENT ON COLUMN "users"."modified_at" IS 'data modified time';

COMMENT ON COLUMN "users"."username" IS 'username';

COMMENT ON COLUMN "verify_emails"."id" IS 'auto increment id';

COMMENT ON COLUMN "verify_emails"."created_at" IS 'data created time';

COMMENT ON COLUMN "verify_emails"."modified_at" IS 'data modified time';

COMMENT ON COLUMN "verify_emails"."expired_at" IS 'email expired time';

COMMENT ON COLUMN "verify_emails"."secret_code" IS 'used to verify the mail';

COMMENT ON COLUMN "verify_emails"."used" IS 'is active';

COMMENT ON COLUMN "sessions"."id" IS 'session id';

COMMENT ON COLUMN "sessions"."created_at" IS 'data created time';

COMMENT ON COLUMN "sessions"."refresh_token" IS 'used to refresh access token';

COMMENT ON COLUMN "sessions"."user_agent" IS 'user client user-agent';

COMMENT ON COLUMN "sessions"."client_ip" IS 'user client x-forward-for';

ALTER TABLE "verify_emails" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "sessions" ADD FOREIGN KEY ("username") REFERENCES "users" ("username");
